--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/src/style.css">
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/assets/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
